kubernetes/blog-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: blogea
  labels:
    app: blogea
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
  annotations:
    keel.sh/pollSchedule: "@every 1m"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blogea
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blogea
    spec:
      containers:
      - name: blogea
        # For development releases the tag is "blogea:dev"
        image: hebertsonm/blogea:dev
        ports: 
        - containerPort: 5000
        stdin: true
        tty: true
      # imagePullSecrets:
      #   - name: dockerhub
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: blogea
spec:
  selector:
    app: blogea
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
