kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blogea
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: blogea.westus2.cloudapp.azure.com
    http:
      paths:
      #- path: /blog(/|$)(.*)
      - path: / #(.*)
        backend:
          serviceName: blogea
          servicePort: 5000
